--- a/less/ImageSlider.less
+++ b/less/ImageSlider.less
@@ -24,7 +24,18 @@
     width:@slideWidth;
     height:@slideHeight;
     .slider {
+        width:100%;
+        height:100%;
+
+        .slide {
+            float:left;
+        }
+
         .slide, img {
+            top:0;
+            left:0;
+            display:block;
+            position:absolute;
             width:@slideWidth;
             height:@slideHeight;
         }
@@ -50,15 +61,14 @@
         height:100%;
 
         .slide {
-            display:block;
-            position:absolute;
             float:left;
-            &> * {
-                position:absolute;
-            }
         }
 
         .slide, img {
+            top:0;
+            left:0;
+            display:block;
+            position:absolute;
             width:@slideWidth;
             height:@slideHeight;
         }
@@ -72,8 +82,10 @@
         text-align:center;
         background:@thumbsBackground;
         overflow:hidden;
+        padding-top:@thumbsPadding;
+
         &.largeThumbs {
-            height:(@thumbsHeight + @thumbsPadding*4);
+//            height:(@thumbsHeight + @thumbsPadding*4);
             .thumb {
                 width:@thumbsWidth;
                 height:@thumbsHeight;
@@ -81,7 +93,7 @@
         }
 
         &.smallThumbs {
-            height:(@thumbsHeight + @thumbsPadding*4) * @smallThumbsZoom;
+//            height:(@thumbsHeight + @thumbsPadding*4) * @smallThumbsZoom;
             .thumb {
                 //        zoom:@smallThumbsZoom; // Unreliable layout in IE.
                 width:@thumbsWidth * @smallThumbsZoom;
